--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "popper",
+  "name": "floating-tooltip-react",
   "version": "0.1.0",
   "description": "Starter project for an npm package bundled with Rollup.",
   "license": "MIT",
