--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "floating-tooltip-react",
   "version": "0.1.0",
-  "description": "Starter project for an npm package bundled with Rollup.",
+  "description": "Headless popper primitive for React built on @floating-ui/react.",
   "license": "MIT",
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
@@ -18,13 +18,25 @@
   "scripts": {
     "clean": "rimraf dist",
     "build": "npm run clean && rollup -c",
+    "build:demo": "rollup -c rollup.demo.mjs",
+    "prepublishOnly": "npm run build",
     "dev": "rollup -c -w",
+    "dev:demo": "rollup -c rollup.demo.mjs -w",
     "test": "vitest run",
     "test:watch": "vitest",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\" \"test/**/*.{js,jsx,ts,tsx}\""
   },
   "keywords": [],
   "author": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/REPLACE_ME/floating-tooltip-react.git"
+  },
+  "bugs": {
+    "url": "https://github.com/REPLACE_ME/floating-tooltip-react/issues"
+  },
+  "homepage": "https://github.com/REPLACE_ME/floating-tooltip-react#readme",
+  "sideEffects": false,
   "engines": {
     "node": ">=18"
   },
@@ -32,6 +44,7 @@
     "@floating-ui/react": "^0.27.16",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-replace": "^6.0.2",
     "@rollup/plugin-typescript": "^11.1.6",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.1.2",
