--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -34,6 +34,8 @@ jobs:
         uses: actions/configure-pages@v5
       - name: Setup Node and pnpm
         uses: pnpm/action-setup@v4
+        with:
+          version: 10
       - name: Install dependencies
         run: pnpm install
       - name: build demo
